finished search functionality

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -19,7 +19,7 @@
               <div class="form-row">
                 <div class="col-md-4 mb-3">
                   <label class="sr-only">Keywords</label>
-                  <input type="text" name="keywords" class="form-control" placeholder="Keyword (Pool, Garage, etc)">
+                  <input type="text" name="keywords" class="form-control" placeholder="Keyword (Studio, Garden, etc)">
                 </div>
 
                 <div class="col-md-4 mb-3">
