--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -48,7 +48,7 @@
                   class="nav-item mr-3"
               {% endif %}
             >
-              <a class="nav-link" href="{% url 'register' %}">
+              <a class="nav-link" href="{% url 'dashboard' %}">
                 <i class="fas fa-user-plus"></i> {{ user.username }}'s Dashboard</a>
             </li>
             <li class="nav-item mr-3">
